--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,11 @@
 
     <section>
       <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
     </section>
 
     <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <!-- <load ="partials/vite-promo.html" /> -->
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
