--- a/src/favorites.html
+++ b/src/favorites.html
@@ -15,9 +15,9 @@
     <load src="./partials/favorites-page/default.html" />
 
 <!-- MAIN-PAGE-BTN -->
-<button type="button">
+<!-- <button type="button">
     <a href="./index.html">Home</a>
-</button>
+</button> -->
 
     <script type="module" src="./js/favorites.js"></script>
 </body>
