--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
   <load src="./partials/main-page/cards.html" />
 
   <!-- FAVORITES-PAGE-BTN -->
-  <button type="button">
+  <!-- <button type="button">
     <a href="./favorites.html">Favorites</a>
-  </button>
+  </button> -->
 
   <script type="module" src="./js/main.js"></script>
 </body>
