--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     </button>
 
     <!-- FAVORITES-PAGE-BTN -->
-    <!-- <button type="button"> 00
+    <!-- <button type="button"> 
     <a href="./favorites.html">Favorites</a>
   </button> -->
 
