--- a/src/index.html
+++ b/src/index.html
@@ -1,49 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TastyTreats</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
 
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TastyTreats</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./css/main.css" />
+</head>
 
-  <body>
-    <!-- HEADER -->
-    <load src="./partials/header.html" />
+<body>
 
-    <!-- HERO -->
-    <load src="./partials/main-page/hero.html" />
+  <!-- HEADER -->
+  <load src="./partials/header.html" />
 
-    <!-- CATEGORIES -->
-    <load src="./partials/main-page/categories.html" />
+  <!-- HERO -->
+  <load src="./partials/main-page/hero.html" />
 
-    <!-- POPULAR -->
-    <load src="./partials/main-page/popular.html" />
+  <!-- CATEGORIES -->
+  <load src="./partials/main-page/categories.html" />
 
-    <!-- FILTERS -->
-    <load src="./partials/main-page/filters.html" />
+  <!-- POPULAR -->
+  <load src="./partials/main-page/popular.html" />
 
-    <!-- CARDS -->
-    <load src="./partials/main-page/cards.html" />
+  <!-- FILTERS -->
+  <load src="./partials/main-page/filters.html" />
 
-    <!-- FAVORITES-PAGE-BTN -->
-    <button type="button">
-      <a href="./favorites.html">Favorites</a>
-    </button>
+  <!-- CARDS -->
+  <load src="./partials/main-page/cards.html" />
 
-    <!-- FAVORITES-PAGE-BTN -->
-    <!-- <button type="button"> 
+  <!-- FAVORITES-PAGE-BTN -->
+  <!-- <button type="button">
     <a href="./favorites.html">Favorites</a>
   </button> -->
 
-    <script type="module" src="./js/main.js"></script>
-  </body>
+  <script type="module" src="./js/main.js"></script>
+</body>
+
 </html>
