--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
   <!-- CARDS -->
   <load src="./partials/main-page/cards.html" />
 
+  <!-- SEE RECIPE MODAL -->
+  <load src="./partials/main-page/see-recipe-modal.html" />
+
   <!-- FAVORITES-PAGE-BTN -->
   <!-- <button type="button">
     <a href="./favorites.html">Favorites</a>
