--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,9 @@
     <a href="./favorites.html">Favorites</a>
   </button> -->
 
+  <!-- NEW ORDER MODAL -->
+  <load src="./partials/main-page/order-now-modal.html" />
+
   <script type="module" src="./js/main.js"></script>
 </body>
 
