--- a/src/favorites.html
+++ b/src/favorites.html
@@ -14,10 +14,8 @@
     <!-- DEFAULT -->
     <load src="./partials/favorites-page/default.html" />
 
-<!-- MAIN-PAGE-BTN -->
-<!-- <button type="button">
-    <a href="./index.html">Home</a>
-</button> -->
+<!-- SCROLL UP -->
+<load src="./partials/components/scroll-up.html" />
 
     <script type="module" src="./js/favorites.js"></script>
 </body>
