--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,11 @@
         <load src="./partials/main-page/cards.html" />
       </div>
     </div>
-    <!-- FAVORITES-PAGE-BTN -->
-    <!-- <button type="button">
-    <a href="./favorites.html">Favorites</a>
-  </button> -->
 
+    <!-- SCROLL UP -->
+    <load src="./partials/components/scroll-up.html" />
+
+    
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
