--- a/src/favorites.html
+++ b/src/favorites.html
@@ -14,6 +14,9 @@
     <!-- DEFAULT -->
     <load src="./partials/favorites-page/default.html" />
 
+    <!-- FOOTER -->
+    <load src="./partials/footer.html" />
+
 <!-- SCROLL UP -->
 <load src="./partials/components/scroll-up.html" />
 
