--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,9 @@
       </div>
     </div>
 
+    <!-- FOOTER -->
+    <load src="./partials/footer.html" />
+
     <!-- SCROLL UP -->
     <load src="./partials/components/scroll-up.html" />
 
