--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,9 @@
       </div>
     </div>
 
+    <!-- GIVE A RATING -->
+<load src="./partials/main-page/give-rating-modal.html" />
+
     <!-- FOOTER -->
     <load src="./partials/footer.html" />
 
