--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
     <!-- GIVE A RATING -->
 <load src="./partials/main-page/give-rating-modal.html" />
 
+  <!-- NEW ORDER MODAL -->
+  <load src="./partials/main-page/order-now-modal.html" />
+
     <!-- FOOTER -->
     <load src="./partials/footer.html" />
 
