--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 <load src="./partials/main-page/give-rating-modal.html" />
 
   <!-- NEW ORDER MODAL -->
-  <load src="./partials/main-page/order-now-modal.html" />
+  <!-- <load src="./partials/main-page/order-now-modal.html" /> -->
 
     <!-- FOOTER -->
     <load src="./partials/footer.html" />
