--- a/src/favorites.html
+++ b/src/favorites.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TastyTreats</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/main.css" />
-</head>
-<body>
+  </head>
+  <body>
     <!-- HEADER -->
     <load src="./partials/header.html" />
-    
+
     <!-- DEFAULT -->
     <load src="./partials/favorites-page/default.html" />
 
     <!-- FOOTER -->
     <load src="./partials/footer.html" />
 
-<!-- SCROLL UP -->
-<load src="./partials/components/scroll-up.html" />
+    <!-- SCROLL UP -->
+    <load src="./partials/components/scroll-up.html" />
 
     <script type="module" src="./js/favorites.js"></script>
-</body>
+  </body>
 </html>
